--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,40 @@
 /* USE CSS LAYOUTS HERE */
 
 .header {
+margin: 25px;
+padding:5px;
 
 }
 
 .main {
+    width:50%;
+    margin:25px;
+    padding: 5px;
+    align-items: center;
+
+
 
 }
 
 .footer-grid {
+  
+    background-color: green;
+    bottom:0px;
+    display:grid;
+    margin:10px;
+    padding:10px;
+    position: sticky;
+    text-size-adjust:inherit;
+
+
 
 }
 
 .footer-flex {
+        position: sticky;
+        display: flex;
+        background-color: orange;
+        font-size: 15px;
+        bottom: 0px;
 
 }
